# lz4

./: .gitignore  CMakeLists.txt
lib/: lz4.h  lz4frame.h  lz4hc.h
src/: SampleHeader.cpp  SampleHeader.h
